# swingby_challenge

./: .gitignore  README.md  config.py  equation_of_motion.py  main.py  orbit.py  planet_position.py  pluto_mission.py  pyproject.toml  requirements.txt  swingby.py  utils.py
.github/workflows/: ci.yml
swingby/: __init__.py
swingby/core/: __init__.py  simulation.py
swingby/physics/: __init__.py  constants.py  dynamics.py
swingby/utils/: __init__.py  coordinates.py  ephemeris.py
swingby/visualization/: __init__.py  plots.py
tests/: test_config.py  test_equation_of_motion.py  test_simulation.py  test_utils.py  test_visualization.py
