[project]
name = "swingby-challenge"
version = "0.1.0"
description = "Spacecraft orbital mechanics simulation with planetary swingby maneuvers"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "sho"}
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
    "astropy>=5.0.0",
    "pandas>=1.3.0",
    "jplephem>=2.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[project.scripts]
swingby-sim = "main:main"